--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,11 +1,38 @@
 @import "../../scss-utils/variables.scss";
 
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   background-color: $headerFooterColor;
+  padding: 0.5rem 1rem;
+  @media screen and (max-width: 415px) {
+    justify-content: flex-end;
+    background-color: $mainColor;
+  }
+  &__title {
+    font-size: $headerFontSize;
+    font-family: $mainFont;
+    font-weight: normal;
+    color: $white;
+    @media screen and (max-width: 415px) {
+      display: none;
+    }
+  }
   &__avatar-frame {
     width: 2.5rem;
     height: 2.5rem;
     background-color: $white;
     border-radius: 50%;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+  &__arrow-down,
+  &__arrow-up {
+    color: $white;
+    cursor: pointer;
   }
 }
