--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
-    justify-content: space-between;
+    justify-content: center;
     @media screen and (max-width: 665px) {
       justify-content: center;
     }
