--- a/src/components/tasks-block/TasksBlock.scss
+++ b/src/components/tasks-block/TasksBlock.scss
@@ -3,9 +3,14 @@
 .tasks-block {
   width: 17.625rem;
   border-radius: 10px;
-  padding: 0.75rem 0.75rem 0.5rem 0.75rem;
+  padding: 0.75rem 0 0.5rem 0.75rem;
   background-color: $blockColor;
-  max-height: 538px;
+  &__tasks-wrapper {
+    max-height: 33.625rem;
+    overflow: auto;
+    padding-right: 0.75rem;
+    margin-bottom: 1rem;
+  }
   &__title {
     font-family: $mainFont;
     font-size: $mainFontSize;
@@ -13,10 +18,25 @@
     font-weight: normal;
     margin-bottom: 1rem;
   }
+  &__task {
+    border: none;
+    border-radius: 5px;
+    width: 15.43rem;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+    outline: none;
+    background-color: $white;
+    font-family: $mainFont;
+    font-size: $mainFontSize;
+    color: $black;
+  }
+  &__task:last-child {
+    margin-bottom: 0;
+  }
   &__input {
     border: none;
     border-radius: 5px;
-    width: 100%;
+    width: 15.43rem;
     padding: 0.5rem;
     margin-bottom: 1rem;
     outline: none;
