--- a/src/index.scss
+++ b/src/index.scss
@@ -8,3 +8,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+  background-color: $white;
+  border-radius: 0.625rem;
+  width: 0.75rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #cbcbcb;
+  border-radius: 0.625rem;
+}
