--- a/src/components/tasks-block/TasksBlock.scss
+++ b/src/components/tasks-block/TasksBlock.scss
@@ -33,7 +33,9 @@
   &__task:last-child {
     margin-bottom: 0;
   }
-  &__input {
+  &__input,
+  &__select,
+  &__option {
     border: none;
     border-radius: 5px;
     width: 15.43rem;
@@ -42,6 +44,7 @@
     outline: none;
     font-family: $mainFont;
     font-size: $mainFontSize;
+    background-color: $white;
     color: $black;
   }
   &__add-btn {
