Made fill and edit for task description

--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -34,6 +34,9 @@
     font-size: $mainFontSize;
     font-family: $mainFont;
   }
+  &__task-description-text {
+    margin-bottom: 1rem;
+  }
   &__decription-input {
     font-family: $mainFont;
     font-size: $mainFontSize;
